--- a/hosted/style.css
+++ b/hosted/style.css
@@ -137,6 +137,7 @@ nav:nth-child(1) {
   margin: 0 auto;
   padding-top: 100px;
   font-size: 1.2em;
+  text-align: center;
 }
 
 .mainForm h3 {
@@ -144,7 +145,7 @@ nav:nth-child(1) {
 }
 
 .mainForm label {
-/*  display: inline-block;*/
+  display: inline-block;
   width: 100px;
   margin-right: 10px;
   text-align: right;
