--- a/views/mainMenu.handlebars
+++ b/views/mainMenu.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hot Potates!</title>
+    <title>Hot Potatoes!</title>
     <meta charset="utf-8"/>
     <style>
       canvas {
@@ -25,23 +25,9 @@
         text-align: center;
       }
 
-      canvas {
-        margin-top: 3%;
-        margin-bottom: 3%;
-      }
-      
       div {
-        font-family: 'Lato', sans-serif;
-        width: 66%;
-        margin: auto;
         text-align: center;
         background-color: #E3C9A3;
-      }
-      
-      input {
-        font-family: 'Source Sans Pro', sans-serif;
-        background-color: '#D4CAA1';
-        color: '#D4CAA1';
       }
       
       p {
@@ -50,19 +36,12 @@
         width: 50%; 
       }
       
-      .everything {
-        box-shadow: 10px 10px 10px;
-        background-color: '#D4CAA1';
-        min-height: 100%;
-      }
-      
        .setup {
       }
       
       #mainMessage {
         font-size: 3em;
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding: 30px;
       }
       
       #welcome {
@@ -74,15 +53,13 @@
         margin: auto;
       }
       
-      #instructions {
+      #score {
         font-size: 1.5em;
         width: 66%;
         margin: auto;
       }
       
       #joinButton {
-        padding-top: 2%;
-        padding-bottom: 2%;
         width: 66%;
         margin: 20px;
         margin: auto;
@@ -109,39 +86,32 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 	<script src="/assets/compiled.js"> </script>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
   
   <input type="hidden" name="_csrf" value={csrfToken} />
   
-  <div class="everything">
+  <div>Instructions: If you have the potato, when a letter appears, press it before the line hits the bottom! Press Space to pass to the next player!</div>
   
   
-<!--    <div id='instructions'>Instructions: If you have the potato, when a letter appears, press it before the line hits the right wall! Press Space to pass to the next player!</div>-->
+  
+  <div id="instructionsButton">
+    <input type="button" value="Instructions">
+  </div>
+<!--
+  <div id="logoutButton">
+    <input type="button" value="Logout">
+  </div>
+-->
+  
+  <div id="mainContent">
+    
+  </div>
 
+  <canvas id="canvas" height="400" width="800">Please use an HTML 5 browser to play Hot Potatoes!</canvas>
+  <div id='mainMessage'></div>
 
-    <div id="signIn">
-      <div class="setup">
-      </div>
-    </div>
-
-    <div id="joinButton">
-      <input type="button" value="Find me a game!">    
-    </div>
-  <!--
-    <div id="logoutButton">
-      <input type="button" value="Logout">
-    </div>
-  -->
-
-    <canvas id="canvas" height="400" width="800">Please use an HTML 5 browser to play Hot Potates!</canvas>
-    <div id='mainMessage'></div>
-    <div id='results'></div>
-
-    <div id='returnToMainMenu'></div>
-    <div id='playAgain'></div>
-
-    </div>
+  <div id='returnToMainMenu'></div>
+  
 </body>
 </html>
