--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,6 +36,7 @@
         margin: auto;
         text-align: center;
         background-color: #E3C9A3;
+        overflow: auto;
       }
       
       input {
@@ -52,7 +53,6 @@
       
       .everything {
         box-shadow: 10px 10px 10px;
-        background-color: '#D4CAA1';
         min-height: 100%;
       }
       
@@ -65,8 +65,6 @@
       }
       
       #playAgain {
-        position: absolute;
-        top: 50%;
         transition: fadein 2s;
       }
       
@@ -100,7 +98,7 @@
       }
       
       #joinButton {
-        padding-top: 8%;
+        padding-top: 2%;
         width: 66%;
         margin: 20px;
         margin: auto;
@@ -122,6 +120,24 @@
         margin-bottom: 1.5em;
       }
       
+      .title {
+        margin-top: 0%;
+        padding-top: 30px;
+        padding-left: 10%;
+        padding-right: 10%;
+        background-color: '#a0a0a0';
+        z-index: 10;
+        font-size: 3em;
+      }
+      
+      #advertisement {
+        width: 66%;
+        font-size: 2em;
+        color: 'white';
+        padding-bottom: 30px;
+        background-color:'#a0a0a0';
+      }
+        
     </style>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -143,7 +159,10 @@
 -->
   
 <!--    <div id='instructions'>Instructions: If you have the potato, when a letter appears, press it before the line hits the right wall! Press Space to pass to the next player!</div>-->
-
+    
+    <h2 class="title">
+      Hot Potates!
+    </h2>
 
     <div id="signIn">
       <div class="setup">
@@ -165,7 +184,11 @@
 
     <div id='returnToMainMenu'></div>
     <div id='playAgain'></div>
-
+    
+    </div>
+  
+    <div id="advertisement">
+      This is where I would place and advertisement
     </div>
 </body>
 </html>
