Min width on everything

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,6 +52,7 @@
       }
       
       .everything {
+        min-width: 800px;
         box-shadow: 10px 10px 10px;
         min-height: 100%;
       }
