--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -122,6 +122,7 @@
       }
       
       #advertisement {
+        min-width: 800px;
         width: 66%;
         font-size: 2em;
         color: 'white';
