--- a/hosted/style.css
+++ b/hosted/style.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background-color: #D4CAA1;
+  background-color: #E3C9A3;
 }
 
 #logo {
@@ -21,7 +21,12 @@ nav {
   width: 100%;
   height: 80px;
   padding-left: 5%;
-  background-color: #A565EE;
+  background-color: #284B63;
+}
+
+nav div {
+  border-color: white;
+  border-right: 5px;
 }
 
 nav:nth-child(1) {
@@ -37,17 +42,17 @@ nav:nth-child(1) {
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-  color: #840032;
+  color: white;
   text-decoration: none;
   padding: 5px;
   border-radius: 4px;
-  background-color: #A565EE;
+  background-color: #284B63;
   transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
   transition: background-color 0.8s ease;
-  background-color: #F495EE;
+  background-color: #434EBA;
 }
 
 .shopForm {
@@ -67,7 +72,7 @@ nav:nth-child(1) {
   margin-left: 10px;
   font-size: 1.2em;
   float: left;
-  color: #840032;
+  color: #E0100B;
   background-color: #6670D4;
   border-radius: 2px;
   border: 2px solid black;
@@ -158,23 +163,23 @@ nav:nth-child(1) {
   text-align: center;
   margin: 0 auto;
   font-size: 1.5em;
-  background-color: #921460;
+  background-color: #284B63;
   border-radius: 2px;
   border-color: #66acee;
   padding: 3px 0px;
-  color: #09FF0E;
+  color: white;
   text-decoration: none;
   margin-top: 20px;
   padding: 10px;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-  color: #09FF0E;
+  color: white;
 }
 
 .formSubmit:hover {
   transition: background-color 0.4s ease;
-  background-color: #BF199C;
+  background-color: #434EBA;
 }
 
 #user, #pass, #pass2 #passNew {
@@ -187,6 +192,14 @@ nav:nth-child(1) {
 #user:focus, #pass:focus, #pass2:focus, #passNew:focus {
   outline: none;
   box-shadow: 0px 0px 1px 1px #A565EE;
+}
+
+#signupForm {
+  
+}
+
+#loginForm {
+  
 }
 
 #catMessage {
