--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,190 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Hot Potates!</title>
-    <meta charset="utf-8"/>
-    <style>
-      canvas {
-        margin: 10px;
-        border: 1px solid black;
-        background-color:black;
-      }
-      
-      .hidden {
-        display: none;
-      }
-      
-      html, body {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding:0;
-        background-color: #284B63;
-        color: #0F1A1F;
-        text-align: center;
-      }
-
-      canvas {
-        margin-top: 3%;
-        margin-bottom: 3%;
-      }
-      
-      div {
-        font-family: 'Lato', sans-serif;
-        width: 66%;
-        margin: auto;
-        text-align: center;
-        background-color: #E3C9A3;
-        overflow: auto;
-      }
-      
-      input {
-        font-family: 'Source Sans Pro', sans-serif;
-        background-color: '#D4CAA1';
-        color: '#D4CAA1';
-      }
-      
-      p {
-        margin-left: 12px;
-        font-size: 1.2em;
-        width: 50%; 
-      }
-      
-      .everything {
-        min-width: 800px;
-        box-shadow: 10px 10px 10px;
-        min-height: 100%;
-      }
-      
-      .endingMessage {
-        font-size: 2em;
-        background-color: '#363536';
-      }
-      
-       .setup {
-      }
-      
-      #playAgain {
-        padding-top: 30px;
-        transition: fadein 2s;
-      }
-      
-      #results {
-        background-color: '#363536';
-      }
-      
-      #mainMessage {
-        font-size: 3em;
-        padding-top: 30px;
-        padding-bottom: 30px;
-      }
-      
-      #navbar {
-        display: inline-block;
-      }
-      
-      #welcome {
-        line-height: 1.5em;
-      }
-      
-      #signIn {
-        width: 66%;
-        margin: auto;
-      }
-      
-      #instructions {
-        font-size: 1.5em;
-        width: 66%;
-        display: inline-block;
-      }
-      
-      #instructions div {
-        margin-top: 10px;
-        margin-bottom: 20px;
-      }
-      
-      #joinButton {
-        padding-top: 2%;
-        width: 66%;
-        margin: 20px;
-        margin: auto;
-      }
-      
-      .title {
-        margin-top: 0%;
-        padding-top: 30px;
-        padding-left: 10%;
-        padding-right: 10%;
-        background-color: '#a0a0a0';
-        z-index: 10;
-        font-size: 3em;
-      }
-      
-      #advertisement {
-        min-width: 800px;
-        width: 66%;
-        font-size: 2em;
-        color: 'white';
-        padding-bottom: 30px;
-        background-color:'#a0a0a0';
-      }
+  <title>Hot Potates!</title>
+  <meta charset="utf-8" />
+  <style>
+    canvas {
+      margin-top: 5%;
+      margin-bottom: 5%;
+      border: 1px solid black;
+      background-color: black;
+    }
+    
+    .hidden {
+      display: none;
+    }
+    
+    html,
+    body {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      background-color: #E3C9A3;
+      color: #0F1A1F;
+      text-align: center;
+    }
+    
+    input {
+      font-family: 'Source Sans Pro', sans-serif;
+      background-color: '#D4CAA1';
+      color: '#D4CAA1';
+    }
+    
+    p {
+      margin-left: 12px;
+      font-size: 1.2em;
+      width: 50%;
+    }
+    
+    .everything {
+      min-width: 800px;
+      box-shadow: 10px 10px 10px;
+      min-height: 100%;
+      font-family: 'Lato', sans-serif;
+      width: 66%;
+      margin: auto;
+      text-align: center;
+      background-color: #284B63;
+      overflow: auto;
+      border-style: solid;
+    }
+    
+    .endingMessage {
+      font-size: 2em;
+      background-color: '#363536';
+    }
         
-    </style>
-    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-	<script src="/assets/compiled.js"> </script>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro" rel="stylesheet">
+    #playAgain {
+      padding-top: 30px;
+      transition: fadein 2s;
+    }
+    
+    #results {
+      background-color: '#363536';
+    }
+    
+    #mainMessage {
+      font-size: 3em;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+    
+    #navbar {
+      display: inline-block;
+    }
+    
+    #welcome {
+      line-height: 1.5em;
+    }
+    
+    #instructionsContent div {
+      padding-top: 20px;
+      padding-bottom: 20px;
+      padding-right: 20px;
+      padding-left: 70px;
+      color: #363536;
+      font-family: 'Lato', sans-serif;
+      font-size: 1.2em;
+    }
+    
+    #instructionsContent {
+      margin-top: 50px;
+      background-color: #EDE8D1;
+      width: 66%;
+      text-align: left;
+      display: inline-block;
+      border-style: solid;
+    }
+    
+    #joinButton {
+      padding-top: 2%;
+      width: 66%;
+      margin: 20px;
+      margin: auto;
+    }
+    
+    .logoutForm {
+      border-style: solid;
+      width: 66%;
+      display: inline-block;
+      background-color: #EDE8D1;
+      margin-top: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      width: 66%;
+      display: inline-block;
+      border-style: solid;
+    }
+    
+    #logoutMessage {
+      font-size: 1.5em;
+      margin-bottom: 50px;
+    }
+    
+    .searchForm {
+      border-style: solid;
+      width: 66%;
+      display: inline-block;
+      background-color: #EDE8D1;
+      margin-top: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      width: 66%;
+      display: inline-block;
+      border-style: solid;
+    }
+    
+    .title {
+      margin-top: 0%;
+      padding-top: 30px;
+      padding-left: 10%;
+      padding-right: 10%;
+      z-index: 10;
+      font-size: 3em;
+      color: white;
+    }
+    
+    #advertisement {
+      min-width: 800px;
+      width: 66%;
+      font-size: 2em;
+      color: 'white';
+      padding-bottom: 30px;
+      background-color: '#284B63';
+    }
+    
+    nav {
+      width: 100%;
+      height: 80px;
+      padding-left: 19.5%;
+      background-color: #284B63;
+      display: inline-block;
+      border-style: solid;
+    }
+    
+    nav:nth-child(1) {
+      padding-left: 33%;
+    }
+    
+    .navlink {
+      padding: 1.55%;
+      font-size: 1.5em;
+      float: left;
+      width: 150px;
+      margin: auto;
+      display: inline-block;
+    }
+    
+    .navlink a,
+    .navlink a:link,
+    .navlink a:visited,
+    .navlink a:hover,
+    .navlink a:active {
+      color: white;
+      text-decoration: none;
+      padding: 5px;
+      border-radius: 4px;
+      background-color: #284B63;
+      transition: background-color 0.4s ease;
+    }
+    
+    .navlink a:hover {
+      transition: background-color 0.8s ease;
+      background-color: #434EBA;
+    }
+
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
+  <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/assets/compiled.js">
+
+
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro" rel="stylesheet">
+
 </head>
+
 <body>
-  
+
   <input type="hidden" name="_csrf" value={csrfToken} />
-  
+
+  <nav>
+    <!--    <div class="navlink"><a id="mainMenuButton">Main Menu</a></div>-->
+    <div class="navlink"><a id="mainMenuButton">Main Menu</a></div>
+    <div class="navlink"><a id="instructions">Instructions</a></div>
+    <div class="navlink"><a id="joinButton">Find Game!</a></div>
+    <div class="navlink"><a id="logoutButton">Logout</a></div>
+  </nav>
+
   <div class="everything">
-  
-<!--
-    <div id="navbar">
-      <div class="mmNav">Main Menu</div>
-      <div class="hpNav">Hot Potates!</div>
-    </div>
--->
-  
-<!--    <div id='instructions'>Instructions: If you have the potato, when a letter appears, press it before the line hits the right wall! Press Space to pass to the next player!</div>-->
-    
-    <h2 class="title">
-      Hot Potates!
-    </h2>
 
-    <div id="signIn">
-      <div class="setup">
-      </div>
+
+    <div id="titleHere">
     </div>
 
-    <div id="joinButton">
-      <input type="button" value="Find me a game!">    
-    </div>
-    <div id="instructions">
-      <input type="button" value="Instructions">
-    </div>
-    
-  <!--
-    <div id="logoutButton">
-      <input type="button" value="Logout">
-    </div>
-  -->
+    <div id='content'></div>
 
-    <canvas id="canvas" height="400" width="800">Please use an HTML 5 browser to play Hot Potates!</canvas>
     <div id='mainMessage'></div>
     <div id='results'></div>
 
     <div id='returnToMainMenu'></div>
     <div id='playAgain'></div>
-    
-    </div>
-  
-    <div id="advertisement">
-      Advertisement would go here
-    </div>
+
+  </div>
+
+  <div id="advertisement">
+    Advertisement would go here
+  </div>
 </body>
+
 </html>
