--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -155,6 +155,7 @@
       color: 'white';
       padding-bottom: 30px;
       background-color: '#284B63';
+      display: inline-block;
     }
     
     nav {
